<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- Menu -->
    <string name="toolbar_add">Add</string>
    <string name="toolbar_modify">Modify</string>
    <string name="toolbar_search">Search</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="settings">Settings</string>
    <string name="simulator">Simulator</string>
    <string name="logout">LogOut</string>

    <!-- Property -->
    <string name="type">Type</string>
    <string name="price">Price in USD</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="description">Description</string>
    <string name="add_property_title">Add a property</string>
    <style name="edit_property_title">Edit a property</style>

    <string name="type_apartment">Apartment</string>
    <string name="type_house">House</string>
    <string name="type_duplex">Duplex</string>
    <string name="type_loft">Loft</string>
    <string name="details_price_euro" translatable="false">€ %1$s</string>
    <string name="details_price_dollar" translatable="false">$ %1$s</string>
    <string name="details_title_media">Media</string>
    <string name="details_title_description">Description</string>
    <string name="details_surface_icon_description">Surface\'s icon</string>
    <string name="details_surface_title">Surface :</string>
    <string name="details_surface">85 m²</string>
    <string name="details_rooms_icon_description">Rooms\'s icon</string>
    <string name="details_rooms_number">N/C</string>
    <string name="details_bedroom_icon_description">Bedroom\'s icon</string>
    <string name="details_number_of_rooms">Number of rooms :</string>
    <string name="details_number_of_bedrooms">Number of bedrooms :</string>
    <string name="details_number_bedrooms">2</string>
    <string name="details_number_of_bathrooms">Number of bathrooms :</string>
    <string name="details_number_bathrooms">2</string>
    <string name="details_address">Address</string>
    <string name="details_date">%1$s/%2$s/%3$s</string>

    <!-- Home -->
    <string name="title_activity_maps">Map</string>
    <string name="looking_for_more_property_in_sale_please_wait">Looking for more property in sale, please wait…</string>
    <string name="application_s_logo">Application\'s logo</string>

    <!-- Search -->
    <string name="search_preview_rooms">between %1$s and %2$s</string>
    <string name="search_button">Search</string>

    <!-- Simulator -->
    <string name="calculer_vos_mensualit_s">Calculate your monthly payments</string>
    <string name="capital_emprunt">Borrowed capital</string>
    <string name="duration_in_year">Duration(in year)</string>
    <string name="rate_in">Rate(in %)</string>
    <string name="calculate">Calculate</string>
    <string name="result">Your monthly payement is %1$s</string>
    <string name="on_sale">On Sale</string>
    <string name="sold">Sold</string>
    <string name="connexion_btn">Connexion</string>

    <!-- Nearby places -->
    <string name="nearby_bus">Bus</string>
    <string name="nearby_post">Post</string>
    <string name="nearby_shop">Shop</string>
    <string name="nearby_school">School</string>
    <string name="nearby_public_transport">Public transport</string>
    <string name="nearby_restaurant">Restaurant</string>
    <string name="nearby_university">University</string>

    <!-- Notification -->
    <string name="notification_txt">Hello %1$s, the property has been successfully saved in database</string>
    <string name="notification_title">Property save with success !</string>
    <string name="notification_channel">Message from RealEstateManage</string>
    <string name="manage_by">Manage by %1$s</string>

    <!-- Search -->
    <string name="search_titile_type">Type :</string>
    <string name="search_title_price">Price :</string>
    <string name="search_title_rooms">Rooms :</string>
    <string name="search_title_location">Location :</string>
    <string name="search_location_hint">Enter one or more keyword, separated by ,</string>
    <string name="search_titile_bedrooms">Bedrooms :</string>
    <string name="search_title_nearby">Nearby :</string>
    <string name="default_photo_uri" translatable="false">android.resource://com.openclassrooms.realestatemanager/drawable/no_image_available_64</string>

    <!--Settings -->
    <string name="choose_your_currency">Choose your currency:</string>
    <string name="settings_euro" translatable="false">Euro</string>
    <string name="settings_dollar" translatable="false">Dollar</string>
    <string name="photo">photo_title</string>
    <string name="add_photo_btn">Add</string>
    <string name="cant_be_empty">Can\'t be empty</string>
    <string name="description_required">Please write a description</string>
    <string name="image_and_description_required">Please select an image and write a description</string>
    <string name="list_location">LOCATION</string>
    <string name="type_villa">Villa</string>
    <string name="add_edit_title_photos">Photos</string>
    <string name="add_edit_nearby">Nearby</string>
    <string name="add_number_of_bathrooms">Number of bathrooms</string>
    <string name="add_number_of_bedrooms">Number of bedrooms</string>
    <string name="address_custom_nbr">Nbr</string>
    <string name="address_custom_street">Street</string>
    <string name="address_custom_zip_code">Zip Code</string>
    <string name="address_custom_city">City</string>
    <string name="address_custom_country">Country</string>
    <string name="add_photo_from_camera">Take Photo</string>
    <string name="add_photo_from_gallery">Choose from Gallery</string>
    <string name="add_photo_cancel">Cancel</string>
    <string name="add_photo_dialog_title">Add Photo!</string>
    <string name="date_on_sale">Selling date</string>
    <string name="sold_date">Sold date</string>
    <string name="manage_by_edit">Manage by</string>
    <string name="location_title">Location</string>
    <string name="photos_title">Photos</string>
    <string name="description_title">Description</string>
    <string name="photo_content_description">Photo\'s property</string>
    <string name="price_marker">Price</string>
    <string name="all">All</string>
    <string name="error_loading_img">Error with image</string>
    <string name="there_s_no_property_saved">There\'s no property saved</string>
    <string name="error_simulator_capital">Please enter a capital</string>
    <string name="error_simulator_length">Please enter a length</string>
    <string name="error_simulator_rate">Please enter a rate</string>
    <string name="please_select_an_item_of_the_list">Please select an item of the list</string>
    <string name="settings_title">Settings</string>
    <string name="settings_success">Settings changed successfully</string>
    <string name="login_connect_succeed">Connexion succeed</string>
    <string name="login_connect_canceled">Connexion canceled</string>
    <string name="login_no_network">No Network</string>
    <string name="login_error_unknown">Unknown error</string>
    <string name="add_edit_error_select_one_image">Please select at least one photo</string>
    <string name="details_map">Map</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="initialize_research">Réinitialiser la recherche</string>

</resources>
